[gd_scene load_steps=6 format=2]

[ext_resource path="res://arts/icons.png" type="Texture" id=1]
[ext_resource path="res://assets/skin_library/skin_library.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 28, 9, 7, 7 )

[sub_resource type="GDScript" id=3]
script/source = "extends TextureButton


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="SkinLibrary" type="Control"]
anchor_right = 0.267
anchor_bottom = 0.948
margin_right = -0.320007
margin_bottom = 0.0799561
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TitleButtons" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 255.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -25, -10 )

[node name="Title" type="Label" parent="VBoxContainer/TitleButtons"]
margin_top = 3.0
margin_right = 33.0
margin_bottom = 17.0
text = "Skins"

[node name="Spacer" type="Control" parent="VBoxContainer/TitleButtons"]
margin_left = 37.0
margin_right = 231.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonAdd" type="TextureButton" parent="VBoxContainer/TitleButtons"]
margin_left = 235.0
margin_right = 255.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
theme = SubResource( 1 )
texture_normal = SubResource( 2 )
expand = true
script = SubResource( 3 )

[node name="FilesTree" type="Tree" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 255.0
margin_bottom = 511.0
size_flags_vertical = 3
